Prevent longer dropdowns from cutting out on too low pages, Ref: DEV-384

--- a/sass/layout/_general.scss
+++ b/sass/layout/_general.scss
@@ -53,6 +53,9 @@ body:not(.wp-admin) {
   margin-left: auto;
   margin-right: auto;
   max-width: 100%;
+
+  // Prevent longer dropdowns from cutting out on too low pages
+  min-height: 100vh;
   overflow: hidden;
   position: relative;
 }
